<resources>
    <string name="app_name">ModSecApp</string>

    <!-- Titles for app pages -->
    <string name="dashboard_title">Dashboard</string>
    <string name="report_title">Report</string>
    <string name="devices_title">Devices</string>

    <!-- ***Placeholder text*** -->

    <!-- Placeholder text for app pages -->
    <string name="dashboard_text">Hello from dashboard</string>
    <string name="report_text">Hello from report</string>
    <string name="devices_text">Hello from devices</string>

    <!-- Placeholder text for reports -->
    <string name="report_entry_device_name_placeholder">Device Name</string>
    <string name="report_entry_date_placeholder">January 01, 2023</string>
    <string name="report_entry_time_placeholder">23:59:59</string>


    <!-- ***Text for Report page*** -->

    <!-- Text for Report filters -->

    <!-- Text for filter chip title -->
    <string name="report_filter_title">Filters:</string>

    <!-- Default text for date filter key button -->
    <string name="report_filter_button_date_default">Select Date Filter</string>
    <string name="report_filter_button_time_default">Select Time Filter</string>

    <!-- Placeholder text for report chips -->
    <string name="report_filter_chip_year_placeholder">Year</string>
    <string name="report_filter_chip_month_placeholder">Month</string>
    <string name="report_filter_chip_day_placeholder">Day</string>
    <string name="report_filter_chip_hour_placeholder">Hour</string>
    <string name="report_filter_chip_minute_placeholder">Minute</string>

    <!-- Text for report chips -->
    <string name="report_filter_chip_year_text">Year: %1$d</string>
    <string name="report_filter_chip_month_text">Month: %1$s</string>
    <string name="report_filter_chip_day_text">Day: %1$d</string>
    <string name="report_filter_chip_hour_text">Hour: %1$d</string>
    <string name="report_filter_chip_minute_text">Minute: %1$d</string>


    <!-- ***Text for Devices page*** -->

    <string name="devices_add_device_button_text">Add Device</string>

    <!-- Text for Device Entry Card -->
    <string name="device_entry_card_name">Name: %1$s</string>
    <string name="device_entry_card_status">Status: %1$s</string>
    <string name="device_entry_card_last_call">Last Call: %1$s</string>
    <string name="device_entry_card_remove_button_text">Remove</string>




</resources>