<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.report.ReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/report_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:id = "@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reportFilterDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_filter_button_date_default" />

            <Button
                android:id="@+id/reportFilterTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_filter_button_time_default" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/reportFiltersChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/reportFilterChipYear"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_filter_chip_year_placeholder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/reportFilterChipMonth"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_filter_chip_month_placeholder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/reportFilterChipDay"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_filter_chip_day_placeholder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/reportFilterChipHour"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_filter_chip_hour_placeholder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/reportFilterChipMinute"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_filter_chip_minute_placeholder" />

        </com.google.android.material.chip.ChipGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never" />





    </LinearLayout>


</ScrollView>