<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="24dp"
    app:cardElevation="5dp"
    android:id = "@+id/devicesEntry">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/deviceEntryStatusImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src = "@drawable/checkmark" />

        <TextView
            android:id="@+id/deviceEntryNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/device_entry_card_name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deviceEntryStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/device_entry_card_status" />

        <TextView
            android:id="@+id/deviceEntryLastCallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/device_entry_card_last_call" />

        <Button
            android:id="@+id/deviceEntryRemoveDevicesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_entry_card_remove_button_text"
            android:backgroundTint="@color/red"/>


    </LinearLayout>




</androidx.cardview.widget.CardView>